--- a/Update ci.yml
+++ b/Update ci.yml
@@ -17,8 +17,8 @@ jobs:
         uses: actions/checkout@v3
       - name: Auto green
         run: |
-          git config --local user.email "justjavac@gmail.com"
-          git config --local user.name "迷渡"
+          git config --local user.email "oaoc639563708@gmail.com"
+          git config --local user.name "oaoc1986"
           git config --local user.name "${{ github.actor }}"
           git remote set-url origin https://${{ github.actor }}:${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }}
           git pull --rebase
